--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div>
         <h1>
             something will be here
+            <a href="/img/cat.jpg"></a>
         </h1>
     </div>
 </body>
