--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div>
         <h1>
             something will be here
-            <a href="/img/cat.jpg"></a>
-        </h1>
+            </h1>
+            <img src="/img/cat.jpg" alt="Nice cat">
     </div>
 </body>
 </html>
